Renamed the .json files to be mod specific. Each mod that has been written so far has had generic names for its .json files across all projects. Those will need to be changed as well. Added support in Clawfect to make adding outlines to relics easier. Change the name that the logger was referencing in Clawfect. Updated DRClaw relic, in custom_relics, to use a outline and to use more dynamic references in its constructor.

--- a/src/main/resources/localization/Clawfect-RelicStrings.json
+++ b/src/main/resources/localization/Clawfect-RelicStrings.json
@@ -3,8 +3,7 @@
     "NAME": "Dr. Claw",
     "FLAVOR": "Next time Gadget...",
     "DESCRIPTIONS": [
-      "Lose 1 Energy at the start of each turn.",
-      "NL Special Relic for 'Clawfect'."
+      "Lose 1 Energy at the start of each turn."
     ]
   }
 }
